--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ img {
 
 .phones {
     display: flex;
+    justify-content: center;
 }
 .button1 {
     background-color: red;
@@ -54,4 +55,7 @@ img {
 }
 body {
     background-image: url("http://1.bp.blogspot.com/-_3f_enidOBs/UwQDExE5fMI/AAAAAAAAH7A/-gb-oYNPPLg/s1600/outAnimation.gif");
+}
+body {
+    text-align: center;
 }
